testdata/baselines/reference/submodule/compiler/moduleResolutionWithExtensions_notSupported2.errors.txt
/a.ts(1,17): error TS2306: File '/jsx.jsx' is not a module.


==== /a.ts (1 errors) ====
    import jsx from "./jsx";
                    ~~~~~~~
!!! error TS2306: File '/jsx.jsx' is not a module.
    